--- a/Kaiserreich Korean Translation/localisation/KR_Austria_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Austria_l_english.yml
@@ -230,7 +230,7 @@ AUS_cs_6:0 "사회 갈등 봉합"
 AUS_cs_6_desc:0 "모든 사회 계층이 부나 통화, 또는 상품의 소멸에 대해 서로를 비난하고 있습니다. 시민은 식량이 없다고 농부들을 비난하고, 농부들은 돈이 없다고 시민들을 비난합니다. 사회는 분열되어 있고, 신중한 담론을 통해서만 그것이 조정될 수 있습니다. 이것이 힘든 여정의 시작입니다."
 
 AUS_cs_7:0 "우리가 필요로 하는 것"
-AUS_cs_7_desc:0 "식민 제국과 제국 협정(Reichspakt)일은 모두 멋지고 괜찮습니다. 하지만 우리에게 필요하지 않은 것은 사치입니다. 상아와 주철을 먹고 살 수는 없습니다. 독일은 햇볕에 그을리러 갈 수 있고 빈의 남자는 그의 위치를 알고 있고, 그가 진정으로 필요로 하는 것, 즉 외부 요인으로부터 자유로운 경제와 사회 입니다."
+AUS_cs_7_desc:0 "식민 제국과 제국 협정(Reichspakt)일은 모두 멋지고 괜찮습니다. 하지만 우리에게 필요하지 않은 것은 사치입니다. 상아와 주철을 먹고 살 수는 없습니다. 독일은 휴양지로 떠나고 있고 빈의 남자는 그가 진정으로 필요로 하는 것, 즉 외부 요인으로부터 자유로운 경제와 사회를 바라고 있습니다."
 
 ### Military Tree
 
@@ -249,47 +249,47 @@ AUS_artillery_modernisation_desc:0 "스코다, 베라 같은 회사들의 해외
 AUS_military_mountaineers:0 "산악 부대 확장"
 AUS_military_mountaineers_desc:0 "산악 부대(Gebirgstruppe)에는 이탈리아의 침략에 거듭 맞서 싸워 온 황실의 가장 훈장을 많이 받고 존경 받는 부대가 있습니다. 그들은 제국의 방위에 필수적이며, 알프스와 카르파티아 지역에는 많은 잠재적인 신병들이 있기 때문에 이 부대들을 확장하고 개선하는 것이 우선입니다.."
 
-AUS_motorisation:0 "Militär-Automobilwesen Expansion"
-AUS_motorisation_desc:0 "While the Austro-Hungarian Empire were pioneers in adopting automobiles for the military, they were always limited in numbers. The k.u.k. Militär-Automobilwesen is the section of the TMK responsible for the development and deployment of military vehicles. The importance of trucks is already clear to the General Staff and they made the motorisation of the army a priority."
+AUS_motorisation:0 "군용 자동차 확장"
+AUS_motorisation_desc:0 "오스트리아-헝가리 제국은 군용 자동차를 연구하는 선구자였지만, 그들은 항상 수적으로 제한되어 있었습니다. k.u.k 군사 자동차 시스템(Militär-Automobilwesen)은 군용 차량의 개발과 배치를 담당하는 TMK의 한 부분입니다. 이미 우리의 참모들은 트럭의 중요성에 눈을 떴고, 군의 자동차 운용을 최우선 과제로 삼았습니다."
 
 AUS_tank_trials:0 "전차 시험 평가"
-AUS_tank_trials_desc:0 "With the trauma of the Weltkrieg still fresh for many, tanks were eagerly embraced in the Austro-Hungarian military as their use were proven during the war, with companies such as Škoda and ČKD developing some of the most advanced tank designs in the world. As tank development rapidly advances, the TMK wants to hold trials for new tanks for different purposes."
+AUS_tank_trials_desc:0 "대전쟁이 트라우마가 아직도 많은 사람들에게 남아있는 가운데, 전차는 오스트리아-헝가리군에서 사용되었습니다. 스코다(Škoda)와 ČKD에서 세계에서 가장 진보된 전차 디자인을 개발하면서 전차들은 오스트리아-헝가리 군에서 열심히 사용되었습니다. TMK는 전차 개발이 진전될수록 다양한 용도의 신차 시운전을 벌이겠다는 계획입니다."
 
-AUS_radar:0 "Funkgestützte Flugzeugortung"
-AUS_radar_desc:0 "The Hungarian mathematician Zoltán Lajos Bay's work on radars has caught the attention of the TMK and the Fliegerkorps, eager to put the invention into practice in order to improve the Empire's defences against threats from the skies. Experiments on the Funkgestützte Flugzeugortung (Radio-based Aircraft Locator) are proving fruitful and the Monarchy should have a working radar soon."
+AUS_radar:0 "항공기 탐지 기술"
+AUS_radar_desc:0 "헝가리의 수학자 졸탄 라조스 베이(Zoltán Lajos Bay)의 레이더 관련 연구는 TMK와 피에르코프(Fliegerkorps)의 관심을 끌었습니다. 이 발명품은 공중의 위협에 대한 제국의 방어력을 향상시키기 위해 사용되기를 바라고 있습니다. 라디오 기반 항공기 탐지기(Funkgestützte Flugzugoortung)에 대한 실험은 성과가 있으며, 제국 일가는 곧 작동 중인 레이더를 가지게 될 것 입니다."
 
 AUS_rockets:0 "로켓 항공 기술"
-AUS_rockets_desc:0 "There are a number of rocket scientists throughout the Empire, such as Eugen Sänger and Theodore von Kármán. While there are doubt about rocketry and its military applications, the Committee wants to develop rockets further, believing that their potential is too great to ignore."
+AUS_rockets_desc:0 "제국에는 Eugen Säger나 Theodore von Kámann같은 많은 로켓 과학자들이 있습니다. 로켓과 그것을 군사적으로 사용할 수 있는지에 대해서는 의문이지만, 위원회는 로켓의 잠재력이 너무 커서 그것을 무시할 수 없다고 믿고 로켓을 더 개발하려고 합니다."
 
 AUS_reform_AOK:0 "군사 최고 사령부 개혁"
-AUS_reform_AOK_desc:0 "The Armeeoberkommando (AOK), or Army High Command, was first formed in 1914. Its task was to unite the different commands of the Common Army, the Navy, the Austrian Landwehr and the Hungarian Honvéd to direct the war effort. Shortly after the war, however, the AOK was disbanded and our forces were divided once more. Recreating the AOK is deemed necessary to reunite the different forces."
+AUS_reform_AOK_desc:0 "AOK라 불리는 아르미오베르코만도(Armeeoberkommando)는 1914년에 처음 창설되었습니다. 그것의 임무는 동맹군, 해군, 오스트리아 육군, 헝가리군(Honvéd)의 서로 다른 명령을 통합하여 전쟁을 지휘하는 것이었습니다. 하지만 전쟁이 끝난 직후, AOK는 해체되었고 우리 군대는 다시 분열되었습니다. AOK의 재결합은 다른 세력들을 재결합시키기위해 필요한 것으로 여겨집니다."
 
 AUS_doctrine_Jansa:0 "얀샤의 중심 계획"
-AUS_doctrine_Jansa_desc:0 "Feldmarschall-Leutnant Alfred Janša von Tannenau, one of the possible candidates for the next Chief of Staff, believes in a defensive strategy for the Empire after the traumatic losses of the Weltkrieg. He believes that thorough planning and preparation are the best way to conduct a war, wanting to improve communications between commanders in order to limit casualties as much as possible."
+AUS_doctrine_Jansa_desc:0 "전장 장교 중위였던 알프레드 안샤 폰 타네나우(Alfred Janša von Tannenau)신임 참모총장은 대전쟁의 충격적인 패배 이후 제국의 방어전략을 믿습니다. 그는 가능한 한 많은 사상자를 줄이기 위해 지휘관들 간의 의사소통을 개선하기를 원하며, 전쟁을 수행하는 가장 좋은 방법은 철저한 계획과 준비라고 믿습니다."
 
 AUS_doctrine_Hickmann:0 "히크만의 화력 우세 교리"
-AUS_doctrine_Hickmann_desc:0 "Generalmajor-Ingenieur Emil Hickmann, a member of the General Staff, believes that the army should be focused on gaining a technical edge against the Monarchy's enemies. As the Weltkrieg remains a traumatic experience, limiting casualties is of utmost importance and Hickmann believes that improved fire support and equipment is key in modern warfare."
+AUS_doctrine_Hickmann_desc:0 "참모부의 일원인 에밀 히크만(Emil Hickmann)장군은 군부가 제국의 적들에 대해 기술적 우위를 확보하는데 초점을 맞추어야 한다고 믿습니다. 대전쟁은 아직도 충격적인 경험으로 남아있기에 사상자를 제한하는 것이 가장 중요하며 히크만은 현대전에서 화재 방지와 장비를 개선하는것이 중요하다고 생각합니다."
 
 AUS_doctrine_von_Hubicki:0 "폰 후비키의 기동전"
-AUS_doctrine_von_Hubicki_desc:0 "General der Kavallerie Alfred von Hubicki, currently the commander of the Austro-Hungarian Cavalry, believes that the future of warfare are tanks and trucks. Mobility is key, with tanks being the new Hussars and Cuirassiers of the battlefield. This new cavalry must outmanoeuvre and overwhelm its enemies before they can react."
+AUS_doctrine_von_Hubicki_desc:0 "오스트리아-헝가리 기병 사령관인 카발리에르 알프레드 폰 허비치(Kavallerie Alfred von Hubicki)는 전쟁의 미래가 전차와 트럭이라고 믿습니다. 전차가 새로운 전장의 후사르(Hussars)와 퀴사리에(Cuirassiers)가 되어 기동력이 중요합니다. 이 새로운 기병대는 전술을 구사해야 하며, 적이 반응하기 전에 적을 압도해야 합니다."
 
 AUS_communications:0 "통신 향상"
-AUS_communications_desc:0 "Since the Weltkrieg began, inventions such as the radio has made communications between commanders and troops far easier. With better communications, high command can react to unforseen events far more quickly, limit the damage they can cause, and counter."
+AUS_communications_desc:0 "대전쟁이 시작된 이래로, 라디오와 같은 발명품은 지휘관과 군대 사이의 통신을 훨씬 더 쉽게 만들었습니다. 더 나은 의사소통을 통해, 높으신 분들은 끔찍한 재앙에 훨씬 더 빨리 반응할 수 있고, 그 재앙이 야기할 수 있는 피해를 제한하고, 대항할 수 있습니다."
 
 AUS_better_support_equipment:0 "화력 지원 최대화"
-AUS_better_support_equipment_desc:0 "Units must be properly equiped to be effective. The more support they have, the better they will perform with less casualties. This not only includes artillery, but trucks to evacuate the wounded, proper reconnaisance and maintenance units, and so on."
+AUS_better_support_equipment_desc:0 "부대들은 효과적일 수 있도록 적절한 장비를 갖추어야 합니다. 그들이 더 많은 지원을 받을수록, 더 적은 사상자가 나올 것 입니다. 여기에는 포병뿐 아니라 부상자를 후송하는 트럭, 적절한 야전병원과 정비부대가 포함됩니다."
 
 AUS_mech_cavalry:0 "기계화 기병"
-AUS_mech_cavalry_desc:0 "While tanks are strong and all, they require support from the infantry or else they become extremely vulnerable. The infantry must be able to keep up with the tanks, and while trucks are good on roads, a tracked transport vehicle would be idea. Fortunately, a Hungarian unit has rebuilt obsolete tanks and artillery tractors into improvised armoured troop transports, which would fill the gap perfectly."
+AUS_mech_cavalry_desc:0 "전차는 튼튼하고 강하지만, 보병의 엄호를 받아야 하고, 그러지 못하면 취약해집니다. 보병들은 전차를 따라잡을 수 있어야 하며, 트럭은 도로에서는 완벽하지만, 추적당할 수 있습니다. 다행히도, 헝가리 부대가 낡은 탱크와 포병을 급조된 무기 수송기로 개조했는데, 이것은 그 문제를 완벽하게 해결할 것 입니다."
 
 AUS_kavalleriepanzer:0 "기병 전차 계획"
-AUS_kavalleriepanzer_desc:0 "As their name implies, Cavalry tanks effectively fill the role cavalry used to. Austria-Hungary has successfully developed and adopted several designs already and there is little impetus to change this. Since mobility is a key part of our new doctrine, development of new cavalry tanks must be prioritised."
+AUS_kavalleriepanzer_desc:0 "그들의 이름이 암시하는것처럼, 기병 전차들은 기병대를 효과적으로 대체합니다. 오스트리아-헝가리는 이미 여러 설계들을 성공적으로 개발하여 채택했으며, 이를 바꿀 이유는 거의 없습니다. 기동력은 새로운 교리의 핵심이기에, 새로운 기병 전차 개발에 중점을 두어야 합니다."
 
 AUS_infanteriepanzer:0 "보병 전차"
-AUS_infanteriepanzer_desc:0 "While the military already has numerous successful cavalry tank designs, the Infantry tank project has been, thus far, unable to provide results. This must be rectified as infantry support is prioritised in our new doctrine and the project should be pushed further. The upcoming designs are becoming heavier and more expensive, but powerful and better protected."
+AUS_infanteriepanzer_desc:0 "군은 이미 수많은 기병 전차 설계를 성공시켰지만, 보병 전차 계획은 지금까지 성과가 없습니다. 이것은 우리의 새로운 교리에서 보병의 지원이 우선시되고 그 계획이 점점 더 추진되어야 하기때문에 수정되어야 합니다. 곧 나올 디자인들은 점점 더 무거워지고 비싸지지만 더 강력하고 더 잘 보호됩니다."
 
 AUS_auftragstaktik:0 "현대 임무형 지휘"
-AUS_auftragstaktik_desc:0 "Auftragstaktik, or Mission-type tactics, have been successfully adopted during the Weltkrieg. These tactics involve high command giving clearly-definied missions that subordinates work independently to accomplish, giving the latter great flexibility and encouraging initiative. Auftragstaktik can be adapted for modern war and applied to the new doctrine."
+AUS_auftragstaktik_desc:0 "임무 형태의 전술(Auftragstaktik)은 대전쟁 기간동안 성공적으로 채택되었습니다. 이러한 전술들은 부하들이 독립적으로 일을 해서 성취할 수 있는 명확히 정의된 임무를 부여하고, 뛰어난 유연성을 부여하며, 솔선수범하도록 장려하는 높은 지휘를 포함합니다. 임무 형태의 전술은 현대 전쟁에 적용할 수 있고 새로운 교리에도 쓸 수 있습니다."
 
 AUS_aviation_effort:0 "k.u.k. 항공부대"
 AUS_aviation_effort_desc:0 "Formerly known as the k.u.k. Luftfahrtruppen, the Fliegerkorps is the air service of Austria-Hungary. It was stretched thin during the Weltkrieg and had a limited number of aircraft at its disposal. Since the end of the war, little was done to rectify this as funding became scarce. With the military receiving substantial funds once more, modernising and expanding the Fliegerkorps is finally possible."
