--- a/Kaiserreich Korean Translation/localisation/KR_Austria_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Austria_l_english.yml
@@ -253,7 +253,7 @@ AUS_motorisation:0 "군용 자동차 확장"
 AUS_motorisation_desc:0 "오스트리아-헝가리 제국은 군용 자동차를 연구하는 선구자였지만, 그들은 항상 수적으로 제한되어 있었습니다. k.u.k 군사 자동차 시스템(Militär-Automobilwesen)은 군용 차량의 개발과 배치를 담당하는 TMK의 한 부분입니다. 이미 우리의 참모들은 트럭의 중요성에 눈을 떴고, 군의 자동차 운용을 최우선 과제로 삼았습니다."
 
 AUS_tank_trials:0 "전차 시험 평가"
-AUS_tank_trials_desc:0 "대전쟁 트라우마가 아직도 많은 사람들에게 남아있는 가운데, 전차는 오스트리아-헝가리군에서 사용되었습니다. 스코다(Škoda)와 ČKD에서 세계에서 가장 진보된 전차 디자인을 개발하면서 전차들은 오스트리아-헝가리 군에서 열심히 사용되었습니다. TMK는 전차 개발이 진전될수록 다양한 용도의 신차 시운전을 벌이겠다는 계획입니다."
+AUS_tank_trials_desc:0 "대전쟁의 트라우마가 아직도 많은 사람들에게 남아있는 가운데, 전차는 오스트리아-헝가리군에서 사용되었습니다. 스코다(Škoda)와 ČKD에서 세계에서 가장 진보된 전차 디자인을 개발하면서 전차들은 오스트리아-헝가리 군에서 열심히 사용되었습니다. TMK는 전차 개발이 진전될수록 다양한 용도의 신차 시운전을 벌이겠다는 계획입니다."
 
 AUS_radar:0 "항공기 탐지 기술"
 AUS_radar_desc:0 "헝가리의 수학자 졸탄 라조스 베이(Zoltán Lajos Bay)의 레이더 관련 연구는 TMK와 피에르코프(Fliegerkorps)의 관심을 끌었습니다. 이 발명품은 공중의 위협에 대한 제국의 방어력을 향상시키기 위해 사용되기를 바라고 있습니다. 라디오 기반 항공기 탐지기(Funkgestützte Flugzugoortung)에 대한 실험은 성과가 있으며, 제국 일가는 곧 작동 중인 레이더를 가지게 될 것 입니다."
