--- a/Kaiserreich Korean Translation/localisation/KR_United_Kingdom_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_United_Kingdom_l_english.yml
@@ -346,8 +346,8 @@ GBR_social_conservative_party:0 "보수당"
 GBR_social_conservative_party_long:0 "보수&연방당"
 GBR_authoritarian_democrat_party:0 "제국당"
 GBR_authoritarian_democrat_party_long:0 "제국당"
-GBR_paternal_autocrat_party:0 "충성파 연맹"
-GBR_paternal_autocrat_party_long:0 "충성파 연맹"
+GBR_paternal_autocrat_party:0 "충성 연맹"
+GBR_paternal_autocrat_party_long:0 "충성 연맹"
 GBR_national_populist_party:0 "연합 제국 연맹"
 GBR_national_populist_party_long:0 "연합 제국 연맹"
 
