--- a/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
@@ -453,25 +453,25 @@ BEL_Cover_The_Fortress_Line:0 "방어선 커버"
 BEL_Cover_The_Fortress_Line_desc:0 "The German Army has tasked us with guarding the Ludendorfflinie and to stop any French threat right in its heels. Sufficient air cover will of course be a requirement for that."
 #BEL_Feldgendarmerie:0 "펠드젠다마리 확장" already defined above as an idea
 BEL_Feldgendarmerie_desc:0 "The Vlaamse Wacht has failed in its duties and can no longer be trusted with securing a loyal nation. To replace them, we have shifted our focus to the German Feldgendarmerie composed of German immigrants and our most loyal followers."
-BEL_Exempt_Walloons_From_the_Army:0 "Exempt Walloons From the Army"
+BEL_Exempt_Walloons_From_the_Army:0 "왈론인 군 면제"
 BEL_Exempt_Walloons_From_the_Army_desc:0 "We cannot trust the Wallonian people in maintaining order nor do they have the loyalty of our Flemish divisions. Should the French attack, they would be a liability and should therefore be removed before disaster strikes."
-BEL_The_Vlaamse_Wacht:0 "Rely on the Vlaamse Wacht"
+BEL_The_Vlaamse_Wacht:0 "플란데런 경비대 의지"
 BEL_The_Vlaamse_Wacht_desc:0 "The Vlaamse Wacht has served us well for many years and while they seem to be slipping a bit, Hendrik Elias has convinced us that it's merely a lack of personnel that keeps them from stopping all insurections."
-BEL_Memories_of_the_Yzer:0 "Memories of the Yzer"
+BEL_Memories_of_the_Yzer:0 "에이저의 기억"
 BEL_Memories_of_the_Yzer_desc:0 "For Five long years, Albert I and his Belgian troops bravely held the Yzer line, doing all they can to hold on to this tiny scrap of Belgian land. Movements such as the Frontbeweging and the tradition to visit the Yzertower stem forth from this valiant resistance and are seen as some of the proudest moments in Flemish history."
-BEL_Increase_Flemish_Conscription:0 "Increase Flemish Conscription"
+BEL_Increase_Flemish_Conscription:0 "플란데런인 징병 증가"
 BEL_Increase_Flemish_Conscription_desc:0 "To compensate for the dismissal of Wallonian troops and to ensure a strong and stable frontier, Adalbert has given the order to increase recruitement for all Flemish provinces."
-BEL_Joint_Doctrine_Developement:0 "Joint Doctrine Development"
+BEL_Joint_Doctrine_Developement:0 "공동 교리 개발"
 BEL_Joint_Doctrine_Developement_desc:0 "The Germans are our allies and masters. It only makes sense that we cooperate militarily as well."
-BEL_Trench_War:0 "Trench Warfare"
+BEL_Trench_War:0 "참호전"
 BEL_Trench_War_desc:0 "The national trauma that followed the German declaration of war in 1914 consisted of many years in the trenches which has hardened our officer staff and has led to massive preparations should war once again arrive on our shores."
-BEL_Increase_FN_Funding:0 "Increase FN Funding"
+BEL_Increase_FN_Funding:0 "FN 투자 증가"
 BEL_Increase_FN_Funding_desc:0 "FN is our major weapons manufacturer and has requested a loan from our government to further innovate and expand their small arms production."
-BEL_Mobilise_the_Reserves:0 "Mobilise the Reserves"
+BEL_Mobilise_the_Reserves:0 "예비군 동원"
 BEL_Mobilise_the_Reserves_desc:0 "The moment we have feared for many years has finally arrived and war is shortly upon us. Our reserves, over 200.000 strong, are inexperienced and ill equipped but they are our last line of defence in these desperate times."
 #BEL_Last_Stand:0 "Last Stand" already defined above as an idea
 #BEL_Last_Stand_desc:0 "Dig in and fight for the motherland! We may have lost once but our people are strong and brave and won't surrender so easily this time." already defined above as an idea description
-BEL_Push_Forwards:0 "Push Forwards"
+BEL_Push_Forwards:0 "전진"
 BEL_Push_Forwards_desc:0 "The counter-offensive has finally arrived. All troops, advance at once!"
 
 BEL_Meuse_Line:0 "마스 선 요새화"
@@ -480,55 +480,55 @@ BEL_KW_Line:0 "KW 선 건설"
 BEL_KW_Line_desc:0 "An extra defensive fortification belt consisting of mainly tank traps and small bunkers will provide us even more time to stop a foreign invasion."
 BEL_Expansion_Lundendorf_Line:0 "루덴도르프선 확장"
 BEL_Expansion_Lundendorf_Line_desc:0 "The Ludendorfflinie is the primary defensive belt on the French border and is supposed to be the first place where we stop the French. Further additions and fortifying of weakspots should thus be a priority for our military budget."
-BEL_Chasseurs_Ardennais:0 "Resist and Bite"
+BEL_Chasseurs_Ardennais:0 "저항과 물기"
 BEL_Chasseurs_Ardennais_desc:0 "Resiste et Mords is the famous motto of the Chasseurs Ardennais. They are our higly mobile and defensive unit that is based in the woods and hills of the Ardennes. While most of this territory now falls under German control, our troops still guard the forests and are a final measure to stop France from entering the Rhineland."
 
-BEL_Independent_Forces:0 "Independent Forces"
+BEL_Independent_Forces:0 "독립군"
 BEL_Independent_Forces_desc:0 "With the German restrictions on our military lifted, it is time to rapidly expand and modernize our small forces."
-BEL_Flemish_Walloon_Officers:0 "Flemish-Walloon Officers"
+BEL_Flemish_Walloon_Officers:0 "플란데런-발로니엔 장교"
 BEL_Flemish_Walloon_Officers_desc:0 "During the Weltkrieg, tensions arose between Flemish soldiers and their Walloon commanders due to linguistic issues. If we are to avoid a repeat of this situation, we need to ensure that French speaking commanders are assigned to French speaking divisions and vice versa."
 BEL_War_of_Defence:0 "방어전"
 BEL_War_of_Defence_desc:0 "We don't have the strength to push into our enemies territory on our own and have a strong tradition of defending on our home territory. By forcing the enemy to come to us, we hope to stop them on our fortifications."
-BEL_German_Favoritism:0 "German Favouritism"
+BEL_German_Favoritism:0 "독일 우호주의"
 BEL_German_Favoritism_desc:0 "The German army is far superior to ours and as such it only seems right that we rely on their officers and military expertise to guide us to victory."
-BEL_Strike_First_Doctrine:0 "Strike First Doctrine"
+BEL_Strike_First_Doctrine:0 "선제 공격 교리"
 BEL_Strike_First_Doctrine_desc:0 "By advancing with motorised equipment and German Panzers, we can outmaneouvre the French and easily break through their lines."
-BEL_Expansion_of_the_Academy:0 "Expansion of the Royal Academy"
+BEL_Expansion_of_the_Academy:0 "왕립 아카데미 확장"
 BEL_Expansion_of_the_Academy_desc:0 "Our military academy is outdated and staffed with old fossils. We need a fresh wind to restart our innovative doctrine development"
-BEL_Small_arms_developement:0 "Small Arms Development"
+BEL_Small_arms_developement:0 "소화기 개발"
 BEL_Small_arms_developement_desc:0 "Our engineers are at the forefront of small arms development and our factories export arms to all parts of the globe. Further investing in this buisness would surely improve our innovative capabilities."
-BEL_Cooperation_with_the_Universities:0 "Cooperation with the Universities"
+BEL_Cooperation_with_the_Universities:0 "대학과의 협력"
 BEL_Cooperation_with_the_Universities_desc:0 "The cooperation between our universities and military R&D is far too limited and could be drastically improved."
-BEL_Enlarge_the_Military_Complex:0 "Enlarge the Military Complex"
+BEL_Enlarge_the_Military_Complex:0 "군사시설 확대"
 BEL_Enlarge_the_Military_Complex_desc:0 "War will soon be upon us and our military complex is still lacking the output required for manning our army. We need more arms manufacturers and we need them quickly."
-BEL_War_on_the_Horizon:0 "War on the Horizon"
+BEL_War_on_the_Horizon:0 "지평선에서의 전쟁"
 BEL_War_on_the_Horizon_desc:0 "The engines of war are slowly starting to roar and it won't be long now before they reach our border. We must prepare, mobilise and do all we can to prevent our small nation from falling."
-BEL_Distribute_Bycicles:0 "Distribute Bicycles"
+BEL_Distribute_Bycicles:0 "자전거 배급"
 BEL_Distribute_Bycicles_desc:0 "We have a strong reliance on bicycles in our army and our manufacturers such as Minerva are producing them as fast as possible but with casualties in the field and the massive expansion of our forces due to the mobilisation, bike deficits are starting to arise."
-BEL_Minerva_Truck_Contract:0 "Minerva Truck Contract"
+BEL_Minerva_Truck_Contract:0 "미네르바 트럭 계약"
 BEL_Minerva_Truck_Contract_desc:0 "Our army needs more trucks and who better to supply these than our famous car manufacturer Minerva?"
-BEL_Artillery_Advances:0 "Artillery Advances"
+BEL_Artillery_Advances:0 "포병 진보"
 BEL_Artillery_Advances_desc:0 "FRC builds some of the finest artillery pieces in the world and is constantly innovating and improving their designs. With a small monetary push by the government, we can speed up this proces."
-BEL_Mechanised_Forces:0 "Mechanised Forces"
+BEL_Mechanised_Forces:0 "기계화 부대"
 BEL_Mechanised_Forces_desc:0 "Mobility is key in modern warfare and we should follow this changing style by investing in mechanised and motorised equipment to support our troops in the field."
-BEL_Anti_Tank_Focus:0 "Anti-Tank Focus"
+BEL_Anti_Tank_Focus:0 "대전차 중점"
 BEL_Anti_Tank_Focus_desc:0 "Through our partners in FRC, we have integrated AT in all of our frontline divisions to fill the lack of armor. "Why build tanks to counter theirs if you can just shoot them?""
-BEL_T13_Success:0 "T13 Tank Programme"
+BEL_T13_Success:0 "T13 전차 계획"
 BEL_T13_Success_desc:0 "The T13 is a small light tank destroyer that is able to quickly advance with our troops, is cheaply manufactured and has the capability to stop far larger and better armoured tanks."
-BEL_Mobile_Defence_Stations:0 "Mobile Defence Platforms"
+BEL_Mobile_Defence_Stations:0 "기동 방어 플랫폼"
 BEL_Mobile_Defence_Stations_desc:0 "While our T13s can stop the first wave of enemy tanks, we will have to produce our own if we want to stay competitive in the long run."
 
-BEL_Masters_of_the_Skies:0 "Masters of the Skies"
-BEL_Renard_Fighter_Program:0 "Renard Fighter Programme"
-BEL_Royal_Air_Academy:0 "Royal Air Academy"
-BEL_SABCA_Bombers:0 "License SABCA Bombers"
-BEL_Requisition_Sabena_Air_Fleet:0 "Requisition Sabena Air Fleet"
-BEL_RADAR_Stations:0 "RADAR Stations"
-BEL_AA_Fortifications:0 "AA Fortifications"
-BEL_Supporting_Role:0 "Supporting Role"
-BEL_CAS_Support:0 "CAS Focus"
-BEL_Ground_Support:0 "Ground Support"
-BEL_Coast_Patrol:0 "Coast Patrol"
+BEL_Masters_of_the_Skies:0 "하늘의 주인"
+BEL_Renard_Fighter_Program:0 "르나르 전투기 계획"
+BEL_Royal_Air_Academy:0 "왕립 공군 아카데미"
+BEL_SABCA_Bombers:0 "SABCA 폭격기 라이센스"
+BEL_Requisition_Sabena_Air_Fleet:0 "사베나 편대 요청"
+BEL_RADAR_Stations:0 "레이더 기지"
+BEL_AA_Fortifications:0 "방공 요새"
+BEL_Supporting_Role:0 "지원 역할"
+BEL_CAS_Support:0 "근접 항공 지원 중점"
+BEL_Ground_Support:0 "지상 지원"
+BEL_Coast_Patrol:0 "해안 순찰대"
 
 ### Tooltips ###
 bel.IPS.tt:0 "§GThis will start an investigation to discover the cause of large scale embezzlement§!\n"
