--- a/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
@@ -193,11 +193,11 @@ BEL_Restore_the_law_Lejeune:0 "르준 법 복구"
 BEL_Restore_the_law_Lejeune_desc:0 "1914년 독일의 정권 이양 이후, 19세기 벨기에 사람들이 얻었던 많은 자유들이 되돌려 졌습니다. 아델베르트 1세에 의해 계속되어 왔던 언론, 사법 제도, 그리고 집행부에 대한 통제는 모두 중앙 집권 독일 정권으로 모두 이양되었습니다. 이 권리를 서서히 국민에게 돌려주고 진정한 민주주의 체제를 재건함으로써 벨기에 민족주의와 망명한 왕 알버트 1세에 대한 충성을 해야 합니다."
 BEL_Rijkswacht:0 "헌병대 설립"
 BEL_Rijkswacht_desc:0 "Our Crime Figthing network is an absolute mess with the Vlaams Wacht, Feldgendarmerie and normal police forces all handle specific parts of the task leading to great unnecessary expenditure and distrust between the different branches. A new proposal by a coalition of parties in the parliament has now offered the creation of 1 centralised force, the Rijskwacht to take over all other branches except the secret service."
-BEL_BWP_Victory:0 "BWP의 승리"
+BEL_BWP_Victory:0 "BWP 의 승리"
 BEL_BWP_Victory_desc:0 "For the first time since the Weltkrieg started in 1914, the BWP or Belgische Werkliedenpartij has been able to secure a strong position in the parliament. Being outlawed for most of the post-Weltkrieg period and having no way to enter elections, it comes as no surprise that the Belgian people have shown their allegiance to the old Socialist mastodont."
 BEL_KP_Victory:0 "가톨릭 지배"
 BEL_KP_Victory_desc:0 "Having ruled the nation from both the shadows and the Flemish Council directly, it is not surprising that the Catholic Party has been able to retain its strong hold on the nation."
-BEL_1938_Elections:0 "1938 선거 유지"
+BEL_1938_Elections:0 "1938년 선거 유지"
 BEL_1938_Elections_desc:0 "Since the Military regime took over in 1914, elections for the regular parliament have been time upon time suspended citing the threat of rising syndicalism and Belgian patriotism as elements infringing on the free will of every citizen. While these claims are however ludicrous, it has allowed us to reign unquestioned for over 2 decades. With tensions rising up quickly now, Adalbert I fears that these lies will no longer be enough to quell the population and that elections will have to go ahead to prevent the collapse of Flanders-Wallonia."
 
 BEL_Elections:0 "선거"
