--- a/Kaiserreich Korean Translation/localisation/KR_New_England_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_New_England_l_english.yml
@@ -433,23 +433,23 @@ newengland.24.c:0 "공화당"
 
 newengland.25.t:0 "[GetYear] 자유당 전당대회"
 newengland.25.d.president:0 "[NEE.GetLeader]는 대통령으로서 그의 당에 의해 만장일치로 재신임되었으며 모든 정치적 도전도 피했습니다."
-newengland.25.d.not_president:0 "At the Liberal Party's second convention, new faces have risen to the forefront to challenge [NEE.GetLeader]. The two leading contenders are both from Rhode Island: Governor Dennis Roberts and Senator Peter Gerry. Who will the delegates pick? "
+newengland.25.d.not_president:0 "자유당의 두번째 전당대회에서 새로운 인물들이 [NEE.GetLeader]에 맞서 출마했습니다. 뉴잉글랜드 출신의 두 경쟁자는  Dennis Roberts 주지사와 Peter Gerry 상원의원입니다. 누가 선출될까요?"
 newengland.25.a:0 "Dennis J. Roberts"
 newengland.25.b:0 "Peter G. Gerry"
-newengland.25.c:0 "Congratulations Mr. President!"
+newengland.25.c:0 "축하합니다, 대통령 각하!"
 
 newengland.26.t:0 "[GetYear] 공화당 전당대회"
 newengland.26.d.president:0 "[NEE.GetLeader]는 대통령으로서 그의 당에 의해 만장일치로 재신임되었으며 모든 정치적 도전도 피했습니다."
-newengland.26.d.not_president:0 "At the Republican Party's convention, new faces have risen to the forefront to challenge [NEE.GetLeader]. The two leading contenders are Governor of New Hampshire Sherman Adams, and Governor of Massachusetts Robert Bradford. Who will the delegates pick?"
+newengland.26.d.not_president:0 "공화당이 두번째 전당대회에서 새로운 인물들이 [NEE.GetLeader]에 맞서 출마했습니다. 두 명의 주요 경쟁자는 Sherman Adams 뉴햄프셔 주지사와 Robert Bradford 매사추세츠 주지사입니다. 누가 선출될까요?"
 newengland.26.a:0 "Sherman Adams"
 newengland.26.b:0 "Robert F. Bradford"
-newengland.26.c:0 "Congratulations Mr. President!"
+newengland.26.c:0 "축하합니다, 대통령 각하!"
 
 newengland.27.t:0 "[GetYear] 민주당 전당대회"
 newengland.27.d.president:0 "[NEE.GetLeader]는 대통령으로서 그의 당에 의해 만장일치로 재신임되었으며 모든 정치적 도전도 피했습니다."
-newengland.27.d.not_president:0 "The [GetYear] Democratic Convention is a rather muted affair compared to 1940's wild week of deliberations. Former Governor Herter has easily secured the nomination for himself, removing most potential rivals before the convention even gathered."
-newengland.27.a:0 "Congratulations Governor Herter!"
-newengland.27.b:0 "Congratulations Mr. President!"
+newengland.27.d.not_president:0 "[GetYear] 민주당 전당대회는 1940년 광란의 전당대회와 비교하면 다소 조용합니다. Herter 전 주지사는 전당대회 전까지 유력한 경쟁자들을 제거하며 쉽게 공천을 확보했습니다. 누가 선출될까요?"
+newengland.27.a:0 "축하합니다 Herter씨!"
+newengland.27.b:0 "축하합니다, 대통령 각하!"
 
 newengland.28.t:0 "[GetYear] 대통령 선거"
 newengland.28.d:0 "뉴잉글랜드의 독립 이후 두 번째 선거가 막 끝났습니다. 대통령과 과반수 이상의 의석을 가져간 정당은..."
@@ -459,26 +459,26 @@ newengland.28.c:0 "민주당"
 
 newengland.29.t:0 "[GetYear] 자유당 전당대회"
 newengland.29.d.president:0 "[NEE.GetLeader]는 대통령으로서 그의 당에 의해 만장일치로 재신임되었으며 모든 정치적 도전도 피했습니다."
-newengland.29.d.president_steps_down:0 "As President [NEE.GetLeader] second term is coming to an end, he has decided not to seek re-election to a third term, following a tradition dating back to George Washington. At their convention, the Liberal Party now must decide who will replace him: Mayor Maurice Tobin of Boston, or Massachusetts Attorney General Paul Dever. Who will the delegates pick?"
-newengland.29.d.not_president:0 "The [GetYear] Liberal convention is here and two candidates have already distinguished themselves: Mayor Maurice Tobin of Boston, or Massachusetts Attorney General Paul Dever. Who will the delegates pick?"
+newengland.29.d.president_steps_down:0 "[NEE.GetLeader]의 두 번째 임기가 끝나가면서, 그는 조지 워싱턴의 전통을 따라 3선 도전을 피할것으로 보입니다. 자유당 전당대회에서, 그를 대신할 사람을 선출해야 합니다. 보스턴의 Maurice Tobin 시장과 Paul Dever 매사추세츠 법무장관이 유력 후보입니다. 누구를 선출할까요?"
+newengland.29.d.not_president:0 "[GetYear] 자유당 전당대회가 후보를 선출하기 위해 열렸습니다. 보스턴의 Maurice Tobin 시장과 Paul Dever 검찰총장이 유력 후보입니다. 누구를 선출할까요?"
 newengland.29.a:0 "Maurice J. Tobin"
 newengland.29.b:0 "Paul A. Dever"
-newengland.29.c:0 "Congratulations Mr. President!"
+newengland.29.c:0 "축하합니다, 대통령 각하!"
 
 newengland.30.t:0 "[GetYear] 공화당 전당대회"
 newengland.30.d.president:0 "[NEE.GetLeader]는 대통령으로서 그의 당에 의해 만장일치로 재신임되었으며 모든 정치적 도전도 피했습니다."
-newengland.30.d.president_steps_down:0 "As President [NEE.GetLeader]'s second term is coming to an end, he has decided not to seek re-election to a third term, following a tradition dating back to George Washington. At their convention, the Republican Party must decide his replacement. Vermont Senator George Aiken and Governor Bradford of Massachusetts have taken early leads. Who will the delegates pick?"
-newengland.30.d.not_president:0 "The [GetYear] Republican convention is here and there are a number of candidates running to become president, the leading ones being Vermont Senator George Aiken and Governor Bradford of Massachusetts. Who will the delegates pick?"
+newengland.30.d.president_steps_down:0 "[NEE.GetLeader]의 두 번째 임기가 끝나가면서, 그는 조지 워싱턴의 전통을 따라 3선 도전을 피할것으로 보입니다. 공화당 전당대회에서, 그의 후임을 선출해야 합니다. 버몬트 주 상원의원 George Aiken과 Bradford 매사추세츠 주지사가 유력 후보입니다. 누구를 선출할까요?"
+newengland.30.d.not_president:0 "[GetYear] 공화당 전당대회가 열렸고, 많은 후보들이 경쟁하고 있습니다. 버몬트 주 상원의원 George Aiken과 Bradford 매사추세츠 주지사가 현재 선두입니다. 누구를 선출할까요?"
 newengland.30.a:0 "George Aiken"
 newengland.30.b:0 "Robert F. Bradford"
-newengland.30.c:0 "Congratulations Mr. President!"
+newengland.30.c:0 "축하합니다, 대통령 각하!"
 
 newengland.31.t:0 "[GetYear] 민주당 전당대회"
 newengland.31.d.president:0 "[NEE.GetLeader]는 대통령으로서 그의 당에 의해 만장일치로 재신임되었으며 모든 정치적 도전도 피했습니다."
-newengland.31.d.president_steps_down:0 "As President [NEE.GetLeader]'s second term is coming to an end, he has decided not to seek re-election to a third term, following a tradition dating back to George Washington. War hero Admiral Thomas Hart is the favorite at the convention to replace [NEE.GetLeader] and is expected to win easily."
-newengland.31.d.not_president:0 "The [GetYear] Democratic convention is here and there are a number of candidates running to become president. Whom shall become the nominee of the Democratic Party?"
+newengland.31.d.president_steps_down:0 "[NEE.GetLeader]의 두 번째 임기가 끝나가면서, 그는 조지 워싱턴의 전통을 따라 3선 도전을 피할것으로 보입니다. 전쟁영웅인 Thomas Hart 제독이 이번 전당대회의 유력 후보이며 [NEE.GetLeader]를 대신해 쉽게 이길걸로 예상됩니다."
+newengland.31.d.not_president:0 "[GetYear] 민주당 전당대회가 열렸고, 많은 후보들이 경쟁하고 있습니다. 누가 민주당 후보가 되어야 할까요?"
 newengland.31.a:0 "Congratulations Admiral Hart"
-newengland.31.b:0 "Congratulations Mr. President!"
+newengland.31.b:0 "축하합니다, 대통령 각하!"
 
 newengland.32.t:0 "[GetYear] 대통령 선거"
 newengland.32.d:0 "[GetYear] 대통령 선거가 끝났습니다. 득표율을 계산한 결과 승리자는..."
@@ -560,9 +560,9 @@ newengland.55.d:0 "미국 내전의 공포가 계속 맹위를 떨치고 있고 
 newengland.55.a:0 "폭력이 곧 끝나기를 "
 
 #TEX
-newengland.56.t:0 "Refugees from the AUS"
-newengland.56.d:0 "Although the journey is full of peril and even though bandits and/or criminals stalk the trails from the deep South all the way to Connecticut, thousands still depart on the journey hoping that they may find peace and a protector in our nation."
-newengland.56.a:0 "Welcome to New England!"
+newengland.56.t:0 "미주 연합으로부터의 난민"
+newengland.56.d:0 "범죄자들이 코네티컷 남쪽의 오솔길을 따라다녀도, 수천명의 사람들은 자신들을 보호해줄 평화로운 곳을 찾기 위해 위험을 감수하고 움직이고 있습니다."
+newengland.56.a:0 "뉴잉글랜드에 오신걸 환영합니다!"
 
 newengland.57.t:0 "Pelley asserts control in the AUS"
 newengland.57.d:0 "It came as no surprise to the people of America that Huey Long served only as a tool for the far more dangerous Pelley. Today the power struggle within the leadership of the Union State finally came to a head as Pelley himself has officially been sworn in as President and has already started to implement his policies of far-reaching racism and his wishes to achieve a White Christian Nation.\n\nIt goes without saying that the response to these events in the Black Belt has been far from welcoming as hundreds of thousands of Afro-American citizens now fear for their future and look North to us in the hopes of finding a safe haven far away from Pelley’s cronies."
