--- a/Kaiserreich Korean Translation/localisation/KR_Ukraine_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ukraine_l_english.yml
@@ -24,9 +24,9 @@ UKR_recovery_aid_2_desc:0 "독일은 우리의 융자 요청을 다시 받아들
 fraud_in_the_administration:0 "행정부의 사기"
 fraud_in_the_administration_desc:0 "-"
 profits_from_kulaks:0 "쿨라크의 이익"
-profits_from_kulaks_desc:0 "우크라이나는 그들의 땅을 소유한 농부인 '쿨라크'에 세금을 올렸고 그 돈을 국가의 가장 궁핍한 농장과 마을들을 개선하기 위해 재투자했습니다. 심지어 가장 가난했던 우크라이나 사람들도 이제는 품위 있게 살 수 있습니다."
+profits_from_kulaks_desc:0 "우크라이나는 그들의 땅을 소유한 농민인 '쿨라크'에 세금을 올렸고 그 돈을 국가의 가장 궁핍한 농장과 마을들을 개선하기 위해 재투자했습니다. 심지어 가장 가난했던 우크라이나 사람들도 이제는 품위 있게 살 수 있습니다."
 another_crisis_kulaks:0 "또 다른 위기"
-another_crisis_kulaks_desc:0 "'쿨라크'로 알려진 부유한 농부들의 땅을 재분배하려는 우크라이나 정부의 결정은 비참한 결과를 가져왔습니다. 농업 수율이 급격히 떨어지고 식량 가격이 급등했습니다."
+another_crisis_kulaks_desc:0 "'쿨라크'로 알려진 부유한 농민들의 땅을 재분배하려는 우크라이나 정부의 결정은 비참한 결과를 가져왔습니다. 농업 수율이 급격히 떨어지고 식량 가격이 급등했습니다."
 ukranian_foreign_policy:0 "우크라이나 대외 정책 중점"
 ukranian_foreign_policy_desc:0 "-"
 investing_in_old_factories:0 "구식 공장 투자"
