--- a/Kaiserreich Korean Translation/localisation/KR_New_England_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_New_England_l_english.yml
@@ -553,7 +553,7 @@ newengland.53.b:0 "너무 위험하다... 난민들 구조에 집중하라"
 
 newengland.54.t:0 "도베르만 '잭'"
 newengland.54.d:0 "인간이 다른 인간을 죽이는게 일상이 되었기에, 동물 세계도 폭력으로 빠져들었습니다. 하지만 코네티컷에서는 잭이라는 이름의 젊은 도베르만이 생디칼리스트들의 테러를 막았습니다! 그 개는 코네티컷 주방위군과 협력하여 훈련을 받고 있었는데, 그의 순찰대가 도망가는 생디칼리스트들을 발견했습니다.\n\n그 개는 즉시 진정한 미국인의 용기로 두 남자 중 한명을 물었습니다. 그 남자는 '폴 래쉬포드' 로 밝혀졌는데, 불과 몇 달전 생디칼리스트 폭동에 연류되어 추적받던 인물이었고, 생디칼리스트들이 코네티컷 전체에 비밀 네트워크를 구축했다는 것을 알아냈습니다.\n\n그의 체포가 미국 내 생디칼리즘의 종말을 의미하지는 않지만, '잭'은 그들의 지도력에 큰 타격을 주었습니다!"
-newengland.54.a:0 "We express our thanks to this good boy!"
+newengland.54.a:0 "이 좋은 친구에게 감사하자!"
 
 newengland.55.t:0 "CSA의 난민"
 newengland.55.d:0 "미국 내전의 공포가 계속 맹위를 떨치고 있고 그들의 영토로 들어오는 거대한 이동의 물결은 끝이 보이지 않습니다. 지난 달과 마찬가지로 우리의 지하철은 다시 한 번 수천명이 전쟁 난민을 우리의 안전한 항구로 성공적으로 이동시켰습니다."
@@ -568,7 +568,7 @@ newengland.57.t:0 "펠리가 미주 연합을 통제합니다"
 newengland.57.d:0 "휴이 롱이 사실 그보다 더 위험한 인물인 펠리의 꼭두각시였다고 해도, 미국인들은 놀라지 않을 것입니다. 미주 연합 내부의 권력 투쟁은 펠리가 공식적으로 대통령에 취임하면서 끝이 난 거 같습니다. 이미 광범위한 인종차별 정책과 백인들의 기독교 국가를 만들고자 하는 그의 소망이 이루어지기 시작했습니다.\n\n블랙벨트는 지금 두려워하고 있고, 펠리의 추종자로부터 멀리 떨어진 안전한 은신처를 찾는 희망과는 더더욱 동떨어져 있습니다."
 newengland.57.a:0 "우리에게도 그들을 위한 장소는 없다!"
 newengland.57.b:0 "엄격한 난민 쿼터제를 실시해라"
-newengland.57.c:0 "보스턴에서 인종 차별을 없다!"
+newengland.57.c:0 "보스턴에서 인종 차별은 없다!"
 
 newengland.58.t:0 "통제되지 않은 이주"
 newengland.58.d:0 "펠리의 반흑인 정책이 아프리카계 미국인들을 겁주어 뉴잉글랜드를 향한 행렬이 순식간에 불어났습니다. 국경경비대는 증가하는 난민과 정부 기관에 보조를 맞출 수 없으며, 구호단체들은 집을 잃은 사람들에게 피난처와 식량을 공급하기 위해 애쓰고 있습니다. 우리는 당장 개입해야 하며, 그렇지 않으면 위험에 처할수도 있습니다.\n\n들어오는 난민 수를 제한하던가, 국경을 봉쇄하는 것 그리고 우리를 향한 압박을 감수하더라도 그들 모두를 받아들이는것 중에서 선택해야 합니다. 구호단체들은 아직 결정된 사안이 없는 이주 정책을 비난하는 정치인들을 비판했지만, 구호단체들도 자원이 점점 부족해지고 홍수 발생 빈도가 점점 늘어난다는 것을 깨닫고 있습니다."
