--- a/Kaiserreich Korean Translation/localisation/KR_New_England_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_New_England_l_english.yml
@@ -295,7 +295,7 @@ NEE_Lowel_Munition_Factory:0 "로웰 군수 공장"
 NEE_Lowel_Munition_Factory_desc:0 "무기 제조 업체인 레밍턴을 돕고 전방부대에 탄약을 지속적으로 공급하기 위해 대공황으로 인구의 40%가 일자리를 잃은 메사추세스 로웰 시에 새로운 군수 공장을 건설하는 자금 조달을 위한 계획이 마련되었습다."
 
 NEE_Reestablish_Minutemen:0 "민병대 재설립"
-NEE_Reestablish_Minutemen_desc:0 "롱 주지사는 민병대의 유산을 물려받았다고 주장하지만, 우리는 렉싱턴과 콩코드 들판에서 영국을 빤히 쳐다본 사람들의 진정한 후계이니, 그들이 우리를 찾아올때 우리는 다시 한 번 더 반대할 것이다."
+NEE_Reestablish_Minutemen_desc:0 "롱 주지사는 민병대의 유산을 물려받았다고 주장하지만, 우리는 렉싱턴과 콩코드 들판에서 영국을 빤히 쳐다본 사람들의 진정한 후계이니, 그들이 우리를 찾아올때 우리는 다시 한 번 더 반대 할 것입니다."
 
 NEE_long_range_patrol:0 "장거리 정찰"
 NEE_long_range_patrol_desc:0 "협상국의 군대와 협력하여, 우리가 천천히 열린 전선을 누르는 대신 적진 한가운데에서 대규모 타격을 가할 수 있는 작지만 강력한 능력에 초점을 맞춰야 한다는 것이 명백해졌습니다."
@@ -528,7 +528,7 @@ newengland.41.a:0 "우리는 영국식 모델을 도입할 것이다"
 newengland.41.b:0 "미국 자동차는 자유의 편에서 달린다!"
 
 newengland.42.t:0 "영국 왕실의 뉴잉글랜드 방문"
-newengland.42.d:0 "에드웓 8세와 오클레앙의 부인 이사벨이 뉴잉글랜드와 캐나다간의 관계 개선을 위해 오늘 보스턴에 도착했습니다. 재임 중인 영국 국왕이 보스턴을 방문한것은 역사상 처음 있는 일입니다. 예상한대로, 대영제국의 왕과 여왕을 보기 위해 많은 군중들이 운집했습니다. 또 왕은 뉴잉글랜드의 여러 지도자들과 정치를 논의하기 위해 온 것으로도 알려져 있습니다."
+newengland.42.d:0 "에드워드 8세와 오클레앙의 부인 이사벨이 뉴잉글랜드와 캐나다간의 관계 개선을 위해 오늘 보스턴에 도착했습니다. 재임 중인 영국 국왕이 보스턴을 방문한것은 역사상 처음 있는 일입니다. 예상한대로, 대영제국의 왕과 여왕을 보기 위해 많은 군중들이 운집했습니다. 또 왕은 뉴잉글랜드의 여러 지도자들과 정치를 논의하기 위해 온 것으로도 알려져 있습니다."
 newengland.42.a:0 "보스턴에 오신걸 환영합니다!"
 
 ### Underground Railroad ###
